@@ -1,10 +1,0 @@
-[Module]
-DisplayName=FALF player integration
-DisplayName[pl]=Integracja z odtwarzaczem FALF
-Description=Integrates Kadu with FALF player
-Description[pl]=Integruje Kadu z odtwarzaczem FALF
-Author=amdfanatyk
-Provides=media_player
-Dependencies=mediaplayer
-Version=core
-Category=Media players
