@@ -7,6 +7,7 @@
 * itunes_mediaplayer: plugin removed (Vogel)
 * profiles_import: plugin removed (Vogel)
 * phonon_sound: plugin removed (Vogel)
+* falf_mediaplayer: plugin removed (Vogel)
 
 +++ version 3.0-rc2
 * docking: #3037 fixed: loading docking plugin after import from 2.x (Vogel)
